; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_p8_pkey.c_PKCS8_pkey_get0.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_p8_pkey.c_PKCS8_pkey_get0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }
%struct.TYPE_6__ = type { %struct.TYPE_5__*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PKCS8_pkey_get0(i32** %0, i8** %1, i32* %2, %struct.TYPE_5__** %3, %struct.TYPE_6__* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__**, align 8
  %10 = alloca %struct.TYPE_6__*, align 8
  store i32** %0, i32*** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32* %2, i32** %8, align 8
  store %struct.TYPE_5__** %3, %struct.TYPE_5__*** %9, align 8
  store %struct.TYPE_6__* %4, %struct.TYPE_6__** %10, align 8
  %11 = load i32**, i32*** %6, align 8
  %12 = icmp ne i32** %11, null
  br i1 %12, label %13, label %20

13:                                               ; preds = %5
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i32**, i32*** %6, align 8
  store i32* %18, i32** %19, align 8
  br label %20

20:                                               ; preds = %13, %5
  %21 = load i8**, i8*** %7, align 8
  %22 = icmp ne i8** %21, null
  br i1 %22, label %23, label %34

23:                                               ; preds = %20
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i8* @ASN1_STRING_get0_data(i32 %26)
  %28 = load i8**, i8*** %7, align 8
  store i8* %27, i8** %28, align 8
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @ASN1_STRING_length(i32 %31)
  %33 = load i32*, i32** %8, align 8
  store i32 %32, i32* %33, align 4
  br label %34

34:                                               ; preds = %23, %20
  %35 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %9, align 8
  %36 = icmp ne %struct.TYPE_5__** %35, null
  br i1 %36, label %37, label %42

37:                                               ; preds = %34
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %39, align 8
  %41 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %9, align 8
  store %struct.TYPE_5__* %40, %struct.TYPE_5__** %41, align 8
  br label %42

42:                                               ; preds = %37, %34
  ret i32 1
}

declare dso_local i8* @ASN1_STRING_get0_data(i32) #1

declare dso_local i32 @ASN1_STRING_length(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
